feat: P4ADEV-1687-create-dp-sync-aca (#24)
Co-authored-by: antonio.torre <antonio.torre@pagopa.it>